src/testData/analysis/pointerof.cr
pointerof(x)

<error descr="Can't take address of self">pointerof(self)</error>